# snipsy

./: .gitignore  AUTO-UPDATER.md  CHANGELOG.md  PLAN.md  README.md  SIGNING.md  index.html  package-lock.json  package.json  playwright.config.ts  release-please-config.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release-macos.yml  release-win-linux.yml  release.yml
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  delivery.rs  demo.rs  elevation.rs  focus.rs  lib.rs  main.rs  models.rs  playback.rs  recorder.rs  scripting.rs  tray.rs
src/components/: ClipEditor.tsx  FFmpegHelper.tsx  ScriptForm.tsx  ScriptList.tsx  Sidebar.tsx  StatusBar.tsx  TextSnippetForm.tsx  TextSnippetList.tsx  TitleBar.tsx  UpdateIndicator.tsx  VideoList.tsx  VideoSnippetForm.tsx  VideoSnippetList.tsx  VideoTimeline.tsx  Welcome.tsx
src/hooks/: useTheme.ts
src/routes/: Playback.tsx
src/services/: backendService.ts  index.ts  mockBackendService.ts  tauriBackendService.ts
src/stores/: projectStore.ts  updateStore.ts
src/types/: index.ts
tests/: demoMode.spec.ts  ffmpegDetection.spec.ts  playback.spec.ts  scriptCrud.spec.ts  scriptRecording.spec.ts  smoke.spec.ts  textSnippetDelete.spec.ts  textSnippetForm.spec.ts  textSnippetList.spec.ts  transitionActions.spec.ts  updateIndicator.spec.ts  videoImport.spec.ts  videoSnippetCrud.spec.ts  videoTimeline.spec.ts
tests/fixtures/empty-project/: project.json
tests/fixtures/full-project/: project.json  text-snippets.json  video-snippets.json
tests/fixtures/text-only-project/: project.json  text-snippets.json
