[package]
name = "snipsy"
version = "0.1.0"
edition = "2021"
description = "A demoer's power tool for managing text and video snippets"

[lib]
name = "snipsy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Tauri plugins
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
tempfile = "3"
