[package]
name = "snipsy"
version = "0.2.0"
edition = "2021"
description = "A demoer's power tool for managing text and video snippets"

[lib]
name = "snipsy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
enigo = { version = "0.3", features = ["serde"] }
arboard = "3"

# Tauri plugins
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

# Cross-platform active window detection
active-win-pos-rs = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
